<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.osama.mediaplayer.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search"
            android:inputType="text"
            android:textColor="@color/edit_text_color" />

        <Button
            android:id="@+id/search_button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search" />
    </LinearLayout>

    <RelativeLayout style="@style/layout_style">

        <ImageView
            android:id="@+id/AllSong"
            style="@style/image_style"
            android:src="@drawable/piano_keys_banner1" />

        <TextView
            style="@style/lay_out2"
            android:text="@string/All_Song"
            android:textColor="@color/main_cat_text_color2" />
    </RelativeLayout>

    <RelativeLayout style="@style/layout_style">

        <ImageView
            android:id="@+id/english"
            style="@style/image_style"
            android:src="@drawable/photo" />

        <TextView
            style="@style/lay_out2"
            android:text="@string/English"
            android:textColor="@color/main_cat_text_color1" />

    </RelativeLayout>

    <RelativeLayout style="@style/layout_style">

        <ImageView
            android:id="@+id/arabic"
            style="@style/image_style"
            android:src="@drawable/photo3" />

        <TextView

            style="@style/lay_out2"
            android:text="@string/Arabic"
            android:textColor="@color/main_cat_text_color1" />

    </RelativeLayout>

    <RelativeLayout style="@style/layout_style">

        <ImageView
            android:id="@+id/classic"
            style="@style/image_style"
            android:src="@drawable/photo2" />

        <TextView
            style="@style/lay_out2"
            android:text="@string/Classic"
            android:textColor="@color/main_cat_text_color2" />

    </RelativeLayout>

</LinearLayout>